==> kreyosopensource/KreyosFirmware/Watch/platform/iwatch/spiflash.c <==
#include "contiki.h"
#include <stdio.h>
#include "sys/rtimer.h"
#include "isr_compat.h"
#include "spiflash.h"
#define DEBUG 0
#include <stdio.h>
#define PRINTF(...) printf(__VA_ARGS__)
#define PRINTF(...)
#define hexdump(...)

static inline uint8_t SPI_FLASH_SendByte( uint8_t data )
{
  UCA1TXBUF = data;
  while(( UCA1IFG & UCRXIFG ) == 0x00 ); // Wait for Rx completion (implies Tx is also complete)
  return( UCA1RXBUF );
}

void SPI_FLASH_SectorErase(u32 SectorAddr, u32 size)
{
  uint8_t opcode;
  if (size == 4 * 1024UL)
  {
    opcode = W25X_SectorErase;
  }
  else if (size == 32 * 1024UL)
  {
    opcode = W25X_BlockErase32;
  }
  else if (size == 64 * 1024UL)
  {
    opcode = W25X_BlockErase64;
  }
  else
  {
    PRINTF("Error in erase size: %lx\n", size);
    return;
  }

  PRINTF("Erase offset: %lx\n", SectorAddr);
 
  /*发送写数据使能指令*/
  SPI_FLASH_WriteEnable();
  /* 使能片选 */
  SPI_FLASH_CS_LOW();
  /*发送扇区擦除指令*/
  SPI_FLASH_SendCommandAddress(opcode, SectorAddr);
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  /* 等待写完毕*/
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(u8* pBuffer, u32 WriteAddr, u16 NumByteToWrite)
{
  PRINTF("Write to Disk: offset:%lx size:%d\n", WriteAddr, NumByteToWrite);
  hexdump(pBuffer, NumByteToWrite);

   /*使能写入*/
  SPI_FLASH_WriteEnable();
  /*使能片选*/
  SPI_FLASH_CS_LOW();
  /* 发送页写入指令*/
  SPI_FLASH_SendCommandAddress(W25X_PageProgram, WriteAddr);

  /*检测写入的数据是否超出页的容量大小*/
  if(NumByteToWrite > SPI_FLASH_PerWritePageSize)
  {
     NumByteToWrite = SPI_FLASH_PerWritePageSize;
  }
  /*循环写入数据*/
  while (NumByteToWrite--)
  {
    /*发送数据*/
    SPI_FLASH_SendByte(~(*pBuffer));
    /* 指针移到下一个写入数据 */
    pBuffer++;
  }
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  /* 等待写完成*/
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(u8* pBuffer, u32 ReadAddr, u16 NumByteToRead)
{
  PRINTF("Read from Disk: offset:%lx size:%d\n", ReadAddr, NumByteToRead);
  //u16 n = NumByteToRead;

   /* 使能片选 */
  SPI_FLASH_CS_LOW();
  /*发送读数据指令*/
  SPI_FLASH_SendCommandAddress(W25X_ReadData, ReadAddr);
  while (NumByteToRead--) /* 循环读取数据*/
  {
    /*读取一个字节数据*/
    *pBuffer = ~SPI_FLASH_SendByte(Dummy_Byte);
    /*数据指针加1*/
    pBuffer++;
  }
  /*失能片选*/
  SPI_FLASH_CS_HIGH();

  hexdump(pBuffer - n, n);
}

void SPI_FLASH_Init(void)
{
  // init SPI
  UCA1CTL1 = UCSWRST;

  UCA1CTL0 |= UCMST + UCSYNC + UCMSB + UCCKPL; // master, 3-pin SPI mode, LSB //UCCKPH
  UCA1CTL1 |= UCSSEL__SMCLK; // SMCLK for now
  UCA1BR0 = 4; // 8MHZ / 4 = 2Mhz
  UCA1BR1 = 0;
  UCA1MCTL = 0;

  //Configure ports.
  CLKDIR |= CLKPIN;
  CLKSEL |= CLKPIN;
  CLKOUT &= ~CLKPIN;

  SPIDIR |= SIPIN | CSPIN;
  SPIDIR &= ~SOPIN; // SO is input
  SPISEL |= SIPIN | SOPIN;
  SPIOUT &= ~SIPIN;
  SPIOUT |= CSPIN; // pull CS high to disable chip

  //SPI_Flash_Reset();

  printf("\n$$OK SPIFLASH\n");
#if 1
  uint8_t FLASH_Status;
  SPI_FLASH_CS_LOW();
  /*发送读状态指令 */
  SPI_FLASH_SendByte(W25X_ReadStatusReg);
  /* 发送空字节 */
  FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  printf("status register 1 = %x ", FLASH_Status);

  SPI_FLASH_CS_LOW();
  /*发送读状态指令 */
  SPI_FLASH_SendByte(W25X_ReadStatusReg2);
  /* 发送空字节 */
  FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  printf("status register 2 = %x ", FLASH_Status);  
#endif
  printf("Find SPI Flash DeviceId = %x\n", (uint16_t)SPI_FLASH_ReadDeviceID());

//  SPI_FLASH_BulkErase();
}
