==> XiaoxingChen/udpBootLoader/Hardware/spiflash/spiflash.c <==
#include "spiflash.h"

void SPI_FLASH_Init(void)
{
	  GPIO_InitTypeDef GPIO_InitStructure;
  	SPI_InitTypeDef  SPI_InitStructure;
  	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
  	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA ,ENABLE);
  	GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_SPI1);
  	GPIO_PinAFConfig(GPIOA, GPIO_PinSource6, GPIO_AF_SPI1);
  	GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_SPI1);
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7;
  	GPIO_Init(GPIOA, &GPIO_InitStructure);
	  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
	  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
	  GPIO_Init(GPIOA, &GPIO_InitStructure);
	  SPI_FLASH_CS_HIGH();
  	SPI_I2S_DeInit(SPI1);
  	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;           //全双工
  	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;                            //8位数据模式
  	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;                                    //空闲模式下SCK为1
  	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;                                  //数据采样从第2个时间边沿开始
  	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;                                     //NSS软件管理
  	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256;           //波特率
  	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;                             //大端模式
  	SPI_InitStructure.SPI_CRCPolynomial = 7;                                       //CRC多项式
  	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;                                  //主机模式
  	SPI_Init(SPI1, &SPI_InitStructure);
  	SPI_Cmd(SPI1, ENABLE);
}

void SPI_FLASH_SectorErase(u32 SectorAddr)
{
  /*发送写数据使能指令*/
  SPI_FLASH_WriteEnable();
	/*等待数据写完，保证写操作是空闲的*/
  SPI_FLASH_WaitForWriteEnd();
  /* 使能片选 */
  SPI_FLASH_CS_LOW();
  /*发送扇区擦除指令*/
  SPI_FLASH_SendByte(W25X_SectorErase);
  /*发送块地址高8位*/
  SPI_FLASH_SendByte((SectorAddr & 0xFF0000) >> 16);
  /*发送块地址中8位*/
  SPI_FLASH_SendByte((SectorAddr & 0xFF00) >> 8);
  /*发送块地址低8位*/
  SPI_FLASH_SendByte(SectorAddr & 0xFF);
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  /* 等待写完毕*/
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(u8* pBuffer, u32 WriteAddr, u16 NumByteToWrite)
{
   /*使能写入*/
  SPI_FLASH_WriteEnable();
  /*使能片选*/
  SPI_FLASH_CS_LOW();
  /* 发送页写入指令*/
  SPI_FLASH_SendByte(W25X_PageProgram);
  /*发送高8位数据地址*/
  SPI_FLASH_SendByte((WriteAddr & 0xFF0000) >> 16);
  /*发送中8位数据地址*/
  SPI_FLASH_SendByte((WriteAddr & 0xFF00) >> 8);
  /*发送低8位数据地址*/
  SPI_FLASH_SendByte(WriteAddr & 0xFF);
  /*检测写入的数据是否超出页的容量大小*/
  if(NumByteToWrite > SPI_FLASH_PerWritePageSize)
  {
     NumByteToWrite = SPI_FLASH_PerWritePageSize;
  }
  /*循环写入数据*/
  while (NumByteToWrite--)
  {
    /*发送数据*/
    SPI_FLASH_SendByte(*pBuffer);
    /* 指针移到下一个写入数据 */
    pBuffer++;
  }
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
  /* 等待写完成*/
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(u8* pBuffer, u32 ReadAddr, u16 NumByteToRead)
{
   /* 使能片选 */
  SPI_FLASH_CS_LOW();
  /*发送读数据指令*/
  SPI_FLASH_SendByte(W25X_ReadData);
  /*发送24位数据地址*/
  /* 发送高8位数据地址*/
  SPI_FLASH_SendByte((ReadAddr & 0xFF0000) >> 16);
  /*发送中8位数据地址*/
  SPI_FLASH_SendByte((ReadAddr& 0xFF00) >> 8);
  /*发送低8位数据地址*/
  SPI_FLASH_SendByte(ReadAddr & 0xFF);
  while (NumByteToRead--) /* 循环读取数据*/
  {
    /*读取一个字节数据*/
    *pBuffer = SPI_FLASH_SendByte(Dummy_Byte);
    /*数据指针加1*/
    pBuffer++;
  }
  /*失能片选*/
  SPI_FLASH_CS_HIGH();
}

u8 SPI_FLASH_SendByte(u8 byte)
{
  /*等待SPI发送空闲*/
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
  /*发送8位数据 */
  SPI_I2S_SendData(SPI1, byte);
 /* 等待接收8位数据 */
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
  /* 返回接收的8位数据 */
  return SPI_I2S_ReceiveData(SPI1);
}
